<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>yokwe</groupId>
    <artifactId>yokwe-root</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    
    <modules>
        <module>yokwe-util</module>
        <module>yokwe-stock-jp</module>
        <module>yokwe-stock-us</module>
        <module>yokwe-stock-trade</module>
        <module>yokwe-finance</module>
    </modules>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.release>21</maven.compiler.release>
    </properties>
    
    <profiles>
 <!-- 
       <profile>
            <id>freebsd</id>
            <activation>
                <os>
                    <name>freebsd</name>
                </os>
            </activation>
            <properties>
                <libreoffice.jar.dir>/usr/local/lib/libreoffice/program/classes</libreoffice.jar.dir>
                <libreoffice.lib.dir>/usr/local/lib/libreoffice/program</libreoffice.lib.dir>
                <libreoffice.app.dir>/usr/local/bin</libreoffice.app.dir>
            </properties>
        </profile>
        <profile>
            <id>linux</id>
            <activation>
                <os>
                    <name>linux</name>
                </os>
            </activation>
            <properties>
                <libreoffice.jar.dir>/usr/lib/libreoffice/program/classes</libreoffice.jar.dir>
            </properties>
        </profile>
-->
        <profile>
            <id>mac</id>
            <activation>
                <os>
                    <name>Mac OS X</name>
                </os>
            </activation>
            <!-- libreoffice -->
            <properties>
                <libreoffice.jar.dir>/Applications/LibreOffice.app/Contents/Resources/java</libreoffice.jar.dir>
                <libreoffice.lib.dir>/Applications/LibreOffice.app/Contents/Frameworks</libreoffice.lib.dir>
                <libreoffice.app.dir>/Applications/LibreOffice.app/Contents/MacOS</libreoffice.app.dir>
            </properties>
        </profile>
    </profiles>
    
    
    <build>
        <plugins>
            <!-- compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <!--  require version 3.7 or higher for java module -->
                <version>3.8.1</version>
                <configuration>
                    <excludes>
                        <exclude>**/test/*.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-jar-plugin</artifactId>
              <version>3.1.0</version>
              <configuration>
                <archive>
                  <manifestEntries>
                    <Automatic-Module-Name>${automatic-module-name}</Automatic-Module-Name>
                  </manifestEntries>
                </archive>
              </configuration>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
            </plugin>
        </plugins>
    </build>
        
</project>
